--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-pyodbc-azure==1.10.0.1
 django-widget-tweaks==1.4.1
 djangorestframework==3.4.5
 Pillow==3.4.2
+psycopg2==2.6.2
 pyodbc==3.1.1
 six==1.10.0
 virtualenv==15.0.3
