--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+dj-database-url==0.4.1
+dj-static==0.0.6
 Django==1.10.4
 django-betterforms==1.1.4
 django-braces==1.9.0
 django-pure-pagination==0.3.0
 django-pyodbc-azure==1.10.0.1
+django-toolbelt==0.0.1
 django-widget-tweaks==1.4.1
 djangorestframework==3.4.5
+gunicorn==19.6.0
 Pillow==3.4.2
 psycopg2==2.6.2
 pyodbc==3.1.1
 six==1.10.0
+static3==0.7.0
 virtualenv==15.0.3
